--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  # https://pub.dev/packages/android_alarm_manager
+  android_alarm_manager: ">=0.4.0+0 <2.0.0"
 
 dev_dependencies:
   flutter_test:
