--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   # https://pub.dev/packages/android_alarm_manager
-  android_alarm_manager: ">=0.4.0+0 <2.0.0"
+  # android_alarm_manager: ">=0.4.0+0 <2.0.0"
 
 dev_dependencies:
   flutter_test:
