--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   provider: ^4.1.2
   intl: ^0.16.1  # internationalization, date formatting
   # https://pub.dev/packages/android_alarm_manager
-  # android_alarm_manager: ">=0.4.0+0 <2.0.0"
+  android_alarm_manager: ">=0.4.0+0 <2.0.0"
 
 dev_dependencies:
   flutter_test:
