--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.16.1  # internationalization, date formatting
   # https://pub.dev/packages/android_alarm_manager
   android_alarm_manager: ">=0.4.0+0 <2.0.0"
+  shared_preferences: ^0.5.6
 
 dev_dependencies:
   flutter_test:
