--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,17 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+
   provider: ^4.1.2
+
   intl: ^0.16.1  # internationalization, date formatting
+
   # https://pub.dev/packages/android_alarm_manager
   android_alarm_manager: ">=0.4.0+0 <2.0.0"
+
   shared_preferences: ^0.5.6
+
+  collection: ^1.14.12
 
 dev_dependencies:
   test: ^1.14.3
