--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^0.1.2
 
@@ -33,7 +35,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
+   assets:
+     - i18n/en.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
