--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/flutter_i18n/en.json
+    - assets/flutter_i18n/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
